[package]
name = "punkt"
version = "1.0.5"
edition = "2018"
authors = ["Ferris Tseng <ferristseng@fastmail.fm>"]
keywords = ["punkt", "sentence", "token", "tokenizer"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ferristseng/rust-punkt"
description = "An implementation of a Punkt sentence tokenizer"
readme = "README.md"

[dependencies]
num = "0.3.1"
phf = { version = "0.8.0", features = ["macros"] }
rust-freqdist = "0.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
walkdir = "2.3.1"
