[package]
name = "punktoo"
version = "1.2.0"
edition = "2021"
authors = ["J/A <archer884@zoho.com>", "Ferris Tseng <ferristseng@fastmail.fm>"]
keywords = ["punkt", "sentence", "token", "tokenizer"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ferristseng/rust-punkt"
description = "An implementation of a Punkt sentence tokenizer"
readme = "README.md"

[dependencies]
num = "0.4.3"
phf = { version = "0.11.3", features = ["macros"] }
rust-freqdist = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
walkdir = "2.5.0"
